@@ -18,6 +18,7 @@ Change log:
 - Change some underworkings of PlaybackService/MediaPlayer. You can now change stations immediately without having to wait for the MediaPlayer object to re-prepare itself.
 - Added a link to login activity to register a new reddit account
 - Show cumulative score
+- If not logged in, dialog gives option to go to Login activity
 
 
 * 0.1 - July 6th, 2011
